--- a/src/CSS/inputrow.css
+++ b/src/CSS/inputrow.css
@@ -72,3 +72,30 @@ body {
   color: azure;
   background-color: #eb9a9a;
 }
+
+/* quotes */
+
+.quotes {
+  color: #eb9a9a;
+  max-width: 800px;
+  margin: 0 auto;
+  font-size: 25px;
+  text-align: left;
+  margin-top: -30px;
+}
+
+.author {
+  color: #fff;
+}
+
+.error-m {
+  font-size: 20px;
+  text-align: center;
+  color: red;
+}
+
+.loading-m {
+  font-size: 25px;
+  text-align: center;
+  color: rgb(33, 120, 241);
+}
