--- a/src/Styles/Calculator.module.css
+++ b/src/Styles/Calculator.module.css
@@ -9,7 +9,7 @@
   margin: 100px auto;
 }
 
-#result-box {
+#resultBox {
   width: 97%;
   height: 66.66px;
   font-size: 20px;
@@ -28,7 +28,7 @@
   color: #fff;
 }
 
-.input-row {
+.inputRow {
   width: 100%;
   height: 84.66px;
   display: flex;
@@ -39,7 +39,7 @@
   margin: 0;
 }
 
-.input-item {
+.inputItem {
   width: 25%;
   height: 100%;
   display: flex;
@@ -50,7 +50,7 @@
   border: 0.5px solid #fff;
 }
 
-.zero-button {
+.zeroButton {
   width: 250px;
   height: 100%;
   display: flex;
