--- a/src/Styles/Navbar.module.css
+++ b/src/Styles/Navbar.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Ysabeau:wght@300&display=swap");
+
 .navbar {
   font-family: "Ysabeau", sans-serif;
   display: flex;
@@ -20,6 +21,7 @@
   justify-content: space-between;
   align-items: center;
   width: 250px;
+  margin-right: 60px;
   list-style: none;
 }
 
