--- a/src/Styles/Navbar.module.css
+++ b/src/Styles/Navbar.module.css
@@ -30,6 +30,13 @@
 }
 
 .link {
+  font-size: 18px;
+  font-weight: 400;
   text-decoration: none;
   color: rgb(101, 115, 115);
+}
+
+.link:hover {
+  font-weight: 600;
+  color: #5085a8;
 }
