--- a/src/Styles/Calculator.module.css
+++ b/src/Styles/Calculator.module.css
@@ -94,3 +94,28 @@
   color: azure;
   background-color: #eb9a9a;
 }
+
+@media screen and (max-width: 860px) {
+  .CPage {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  .calculator {
+    font-family: "Nunito", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 340px;
+    height: 340px;
+    margin: 30px auto;
+  }
+
+  .zeroButton {
+    width: 170px;
+  }
+}
