--- a/src/Styles/Calculator.module.css
+++ b/src/Styles/Calculator.module.css
@@ -19,6 +19,11 @@
   font-family: "Ysabeau", sans-serif;
 }
 
+.cartoon2 {
+  display: flex;
+  width: 58%;
+}
+
 .calculator {
   font-family: "Nunito", sans-serif;
   display: flex;
@@ -102,6 +107,16 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 0 auto;
+  }
+
+  .image {
+    width: 100%;
+    text-align: center;
+  }
+
+  .cartoon2 {
+    margin: 20px auto;
+    width: 350px;
   }
 
   .calculator {
